--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
         <script src="./event.js"></script>
+        <script>
+            console.log( Event.getResult() );
+        </script>
    </head>
    <body>
    </body>
